--- a/sass/components/_section__title.scss
+++ b/sass/components/_section__title.scss
@@ -1,6 +1,6 @@
 .section__title {
-  @include font(36px, 1.17, 0.03em, bold);
-  margin-bottom: 50px;
+  @include font(28px, 1.18, 0.03em, 700);
+  margin-bottom: 30px;
   text-align: center;
   color: var(--second-text-color);
 }
