--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -1,21 +1,34 @@
+.clients {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
 .clients-list {
-  display: flex;
   justify-content: center;
+  margin-bottom: -30px;
+  margin-left: -30px;
+  @media screen and (min-width: 480px) {
+    display: flex;
+    flex-wrap: wrap;
+  }
 }
 .clients-list__item {
   display: flex;
   justify-content: center;
   align-items: center;
-  & + & {
+  margin-bottom: 30px;
+  @media screen and (min-width: 480px) {
+    width: calc(100% / 2 - 30px);
     margin-left: 30px;
   }
+
   color: var(--icon-social-color);
 }
 .clients-list__link {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 170px;
+  width: 210px;
   height: 92px;
   fill: var(--icon-social-color);
   border: 1px solid var(--icon-social-color);
