--- a/sass/components/_section__title.scss
+++ b/sass/components/_section__title.scss
@@ -3,4 +3,7 @@
   margin-bottom: 30px;
   text-align: center;
   color: var(--second-text-color);
+  @media screen and (min-width: 1200px) {
+    @include font(36px, 1.17, 0.03em, 700);
+  }
 }
