--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -1,12 +1,20 @@
 .clients {
   padding-top: 60px;
   padding-bottom: 60px;
+  @media screen and (min-width: 1200px) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .clients-list {
   justify-content: center;
   margin-bottom: -30px;
   margin-left: -30px;
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    display: flex;
+    flex-wrap: wrap;
+  }
   @media screen and (min-width: 480px) {
     display: flex;
     flex-wrap: wrap;
@@ -14,11 +22,32 @@
 }
 .clients-list__item {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   margin-bottom: 30px;
-  @media screen and (min-width: 480px) {
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    width: 320px;
     width: calc(100% / 2 - 30px);
+    margin-left: 30px;
+  }
+  @media screen and (min-width: 480px) {
+    width: 480px;
+    width: calc(100% / 2 - 30px);
+    margin-left: 30px;
+  }
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+    width: 768px;
+    width: calc(100% / 3 - 30px);
+    margin-left: 30px;
+  }
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    flex-wrap: wrap;
+    width: 1200px;
+    width: calc(100% / 6 - 30px);
     margin-left: 30px;
   }
 
@@ -28,7 +57,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 210px;
+  width: 226px;
   height: 92px;
   fill: var(--icon-social-color);
   border: 1px solid var(--icon-social-color);
