--- a/sass/layout/_about-profession.scss
+++ b/sass/layout/_about-profession.scss
@@ -5,6 +5,9 @@
 .about-profession {
   background-color: var(--first-color);
   padding-top: 0;
+  @media screen and (max-width: 1199px) {
+    display: none;
+  }
 }
 .about-profession__item {
   & + & {
