--- a/css/main.css
+++ b/css/main.css
@@ -523,20 +523,62 @@ body {
 }
 
 .spc {
+  max-width: 480px;
   background-color: var(--first-color);
+  align-items: center;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+@media screen and (min-width: 768px) {
+  .spc {
+    max-width: 768px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .spc {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .spc__list {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+@media screen and (min-width: 768px) {
+  .spc__list {
+    margin: -15px;
+  }
 }
 
 .spc__item {
-  width: 270px;
-  flex-basis: calc((100% - 60px) / 4);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.spc__item + .spc__item {
-  margin-left: 30px;
+@media screen and (max-width: 767px) {
+  .spc__item:not(:last-child) {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .spc__item {
+    width: calc(100% / 2 - 30px);
+    margin: 15px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .spc__item {
+    width: calc(100% / 4 - 30px);
+  }
 }
 
 .spc__thumb {
@@ -657,6 +699,12 @@ body {
   padding-top: 0;
 }
 
+@media screen and (max-width: 1199px) {
+  .about-profession {
+    display: none;
+  }
+}
+
 .about-profession__item + .about-profession__item {
   margin-left: 30px;
 }
@@ -688,26 +736,66 @@ body {
 }
 
 .team {
+  display: flex;
+  align-items: center;
   background-color: var(--btn-port-color);
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+@media screen and (min-width: 1200px) {
+  .team {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .team__list {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+@media screen and (min-width: 768px) {
+  .team__list {
+    margin: -15px;
+  }
 }
 
 .team__item {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 30px;
   background: var(--first-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
 
-.team__item + .team__item {
-  margin-left: 30px;
+@media screen and (max-width: 767px) {
+  .team__item:not(:last-child) {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .team__item {
+    width: calc(100% / 2 - 30px);
+    margin: 15px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .team__item {
+    width: calc(100% / 4 - 30px);
+  }
 }
 
 .team__card {
   align-items: center;
-  padding: 30px 32px 32px 32px;
+  padding: 30px 30px 32px 32px;
   text-align: center;
 }
 
@@ -736,6 +824,7 @@ body {
 }
 
 .clients {
+  align-items: center;
   padding-top: 60px;
   padding-bottom: 60px;
 }
@@ -749,6 +838,7 @@ body {
 
 .clients-list {
   justify-content: center;
+  align-items: center;
   margin-bottom: -30px;
   margin-left: -30px;
 }
@@ -794,8 +884,6 @@ body {
 
 @media screen and (min-width: 768px) {
   .clients-list__item {
-    display: flex;
-    flex-wrap: wrap;
     width: 768px;
     width: calc(100% / 3 - 30px);
     margin-left: 30px;
@@ -804,8 +892,6 @@ body {
 
 @media screen and (min-width: 1200px) {
   .clients-list__item {
-    display: flex;
-    flex-wrap: wrap;
     width: 1200px;
     width: calc(100% / 6 - 30px);
     margin-left: 30px;
