--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -1,4 +1,5 @@
 .clients {
+  align-items: center;
   padding-top: 60px;
   padding-bottom: 60px;
   @media screen and (min-width: 1200px) {
@@ -9,6 +10,7 @@
 
 .clients-list {
   justify-content: center;
+  align-items: center;
   margin-bottom: -30px;
   margin-left: -30px;
   @media screen and (min-width: 320px) and (max-width: 480px) {
@@ -37,15 +39,11 @@
     margin-left: 30px;
   }
   @media screen and (min-width: 768px) {
-    display: flex;
-    flex-wrap: wrap;
     width: 768px;
     width: calc(100% / 3 - 30px);
     margin-left: 30px;
   }
   @media screen and (min-width: 1200px) {
-    display: flex;
-    flex-wrap: wrap;
     width: 1200px;
     width: calc(100% / 6 - 30px);
     margin-left: 30px;
