--- a/sass/layout/_specification.scss
+++ b/sass/layout/_specification.scss
@@ -1,14 +1,41 @@
 .spc {
+  max-width: 480px;
   background-color: var(--first-color);
+  align-items: center;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  @media screen and (min-width: 768px) {
+    max-width: 768px;
+  }
+  @media screen and (min-width: 1200px) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 .spc__list {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  @media screen and (min-width: 768px) {
+    margin: -15px;
+  }
 }
 .spc__item {
-  width: 270px;
-  flex-basis: calc((100% - 60px) / 4);
-  & + & {
-    margin-left: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  @media screen and (max-width: 767px) {
+    &:not(:last-child) {
+      margin-bottom: 30px;
+    }
+  }
+  @media screen and (min-width: 768px) {
+    width: calc(100% / 2 - 30px);
+    margin: 15px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: calc(100% / 4 - 30px);
   }
 }
 .spc__thumb {
