--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -1,22 +1,50 @@
 .team {
+  display: flex;
+  align-items: center;
   background-color: var(--btn-port-color);
+  padding-top: 60px;
+  padding-bottom: 60px;
+  @media screen and (min-width: 1200px) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 .team__list {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  @media screen and (min-width: 768px) {
+    margin: -15px;
+  }
 }
 .team__item {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 30px;
+  @media screen and (max-width: 767px) {
+    &:not(:last-child) {
+      margin-bottom: 30px;
+    }
+  }
+  @media screen and (min-width: 768px) {
+    width: calc(100% / 2 - 30px);
+    margin: 15px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: calc(100% / 4 - 30px);
+  }
   background: var(--first-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
-  & + & {
-    margin-left: 30px;
-  }
 }
 
 .team__card {
   align-items: center;
-  padding: 30px 32px 32px 32px;
+  padding: 30px 30px 32px 32px;
   text-align: center;
 }
 .team__name {
