--- a/css/main.css
+++ b/css/main.css
@@ -491,41 +491,71 @@ body {
 }
 
 .hero {
+  max-width: 480px;
+  text-align: center;
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
   background-color: var(--second-color);
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../img/hero.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  max-width: 1600px;
-  height: 600px;
-  padding-top: 200px;
-  padding-bottom: 200px;
-  text-align: center;
-  margin-left: auto;
-  margin-right: auto;
+}
+
+@media screen and (min-width: 768px) {
+  .hero {
+    max-width: 768px;
+    background-color: var(--main-background-color);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4));
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .hero {
+    max-width: 1200px;
+    min-height: 600px;
+    padding-top: 0;
+    background-color: var(--main-background-color);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4));
+  }
 }
 
 .hero__title {
-  max-width: 696px;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 360px;
+  height: auto;
+  color: var(--first-color);
   font-size: 44px;
   line-height: 1.36;
   letter-spacing: 0.06em;
   font-weight: 900;
   margin-top: 0;
+  padding: 0;
   margin-bottom: 30px;
   text-transform: uppercase;
-  color: var(--first-color);
 }
 
-.center {
-  margin-left: auto;
-  margin-right: auto;
+@media screen and (min-width: 1200px) {
+  .hero__title {
+    max-width: 696px;
+    font-size: 44px;
+    line-height: 1.36;
+    letter-spacing: 0.06em;
+    font-weight: 900;
+    color: var(--first-color);
+  }
 }
 
 .spc {
   max-width: 480px;
-  background-color: var(--first-color);
   align-items: center;
+  background-color: var(--first-color);
+  margin: 0 auto;
   padding-top: 60px;
   padding-bottom: 60px;
 }
@@ -538,16 +568,19 @@ body {
 
 @media screen and (min-width: 1200px) {
   .spc {
+    max-width: 1200px;
     padding-top: 94px;
     padding-bottom: 94px;
   }
 }
 
+.section_title {
+  display: none;
+}
+
 .spc__list {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
 }
 
 @media screen and (min-width: 768px) {
@@ -583,7 +616,7 @@ body {
 
 .spc__thumb {
   display: flex;
-  width: 270px;
+  width: 100%;
   height: 120px;
   justify-content: center;
   align-items: center;
