--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,4 +1,9 @@
 .hero {
+  max-width: 480px;
+  text-align: center;
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
   background-color: var(--second-color);
   background-image: linear-gradient(
       rgba(47, 48, 58, 0.4),
@@ -8,23 +13,42 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  max-width: 1600px;
-  height: 600px;
-  padding-top: 200px;
-  padding-bottom: 200px;
-  text-align: center;
-  margin-left: auto;
-  margin-right: auto;
+  @media screen and (min-width: 768px) {
+    max-width: 768px;
+    background-color: var(--main-background-color);
+    background-image: linear-gradient(
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    );
+  }
+  @media screen and (min-width: 1200px) {
+    max-width: 1200px;
+    min-height: 600px;
+    padding-top: 0;
+    background-color: var(--main-background-color);
+    background-image: linear-gradient(
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    );
+  }
 }
 .hero__title {
-  max-width: 696px;
-  @include font(44px, 1.36, 0.06em, 900);
-  margin-top: 0;
-  margin-bottom: 30px;
-  text-transform: uppercase;
-  color: var(--first-color);
-}
-.center {
+  text-align: center;
+  align-items: center;
+  justify-content: center;
   margin-left: auto;
   margin-right: auto;
+  max-width: 360px;
+  height: auto;
+  color: var(--first-color);
+  @include font(44px, 1.36, 0.06em, 900);
+  margin-top: 0;
+  padding: 0;
+  margin-bottom: 30px;
+  text-transform: uppercase;
+  @media screen and (min-width: 1200px) {
+    max-width: 696px;
+    @include font(44px, 1.36, 0.06em, 900);
+    color: var(--first-color);
+  }
 }
