--- a/sass/layout/_specification.scss
+++ b/sass/layout/_specification.scss
@@ -1,22 +1,25 @@
 .spc {
   max-width: 480px;
-  background-color: var(--first-color);
   align-items: center;
+  background-color: var(--first-color);
+  margin: 0 auto;
   padding-top: 60px;
   padding-bottom: 60px;
   @media screen and (min-width: 768px) {
     max-width: 768px;
   }
   @media screen and (min-width: 1200px) {
+    max-width: 1200px;
     padding-top: 94px;
     padding-bottom: 94px;
   }
 }
+.section_title {
+  display: none;
+}
 .spc__list {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
   @media screen and (min-width: 768px) {
     margin: -15px;
   }
@@ -40,7 +43,7 @@
 }
 .spc__thumb {
   display: flex;
-  width: 270px;
+  width: 100%;
   height: 120px;
   justify-content: center;
   align-items: center;
