--- a/css/main.css
+++ b/css/main.css
@@ -530,7 +530,7 @@ body {
   max-width: 360px;
   height: auto;
   color: var(--first-color);
-  font-size: 44px;
+  font-size: 26px;
   line-height: 1.36;
   letter-spacing: 0.06em;
   font-weight: 900;
@@ -1165,6 +1165,27 @@ body {
   justify-content: center;
 }
 
+.section__portfolio {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--btn-port-color);
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+@media screen and (min-width: 1200px) {
+  .section__portfolio {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+}
+
+.card {
+  position: relative;
+  overflow: hidden;
+}
+
 .card__title {
   font-size: 18px;
   line-height: 2;
@@ -1185,18 +1206,43 @@ body {
 .project-list {
   display: flex;
   flex-wrap: wrap;
-  margin-top: -30px;
-  margin-left: -30px;
+  justify-content: center;
 }
 
-.project-list .project-list__item {
-  flex-basis: calc(100% / 3 - var(--size-simple));
-  margin-left: var(--size-simple);
-  margin-top: var(--size-simple);
+@media screen and (min-width: 768px) {
+  .project-list {
+    margin: -15px;
+  }
 }
 
-.project-list__item:hover, .project-list__item:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+.project-list__item {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 30px;
+  background: var(--first-color);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
+
+@media screen and (max-width: 767px) {
+  .project-list__item:not(:last-child) {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .project-list__item {
+    width: calc(100% / 2 - 30px);
+    margin: 15px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .project-list__item {
+    width: calc(100% / 3 - 30px);
+  }
 }
 
 .project-list__link {
@@ -1214,11 +1260,6 @@ body {
 .item-project:nth-last-child(-n + 3) {
   margin-bottom: 0;
 }*/
-.card {
-  position: relative;
-  overflow: hidden;
-}
-
 /*.over-t {
   position: absolute;
   width: 100%;
