--- a/sass/layout/_project.scss
+++ b/sass/layout/_project.scss
@@ -1,3 +1,20 @@
+.section__portfolio {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--btn-port-color);
+  padding-top: 60px;
+  padding-bottom: 60px;
+  @media screen and (min-width: 1200px) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+}
+.card {
+  position: relative;
+  overflow: hidden;
+}
+
 .card__title {
   @include font(18px, 2, 0.06em, bold);
   margin-bottom: 4px;
@@ -10,20 +27,43 @@
 .project-list {
   display: flex;
   flex-wrap: wrap;
-  margin-top: -30px;
-  margin-left: -30px;
+  justify-content: center;
+  @media screen and (min-width: 768px) {
+    margin: -15px;
+  }
 }
 .project-list__item {
-  .project-list & {
-    flex-basis: calc(100% / 3 - var(--size-simple));
-    margin-left: var(--size-simple);
-    margin-top: var(--size-simple);
+  // .project-list & {
+  //   flex-basis: calc(100% / 3 - var(--size-simple));
+  //   margin-left: var(--size-simple);
+  //   margin-top: var(--size-simple);
+  // }
+  // &:hover,
+  // &:focus {
+  //   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+  //     1px 4px 6px rgba(0, 0, 0, 0.16);
+  // }
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 30px;
+  @media screen and (max-width: 767px) {
+    &:not(:last-child) {
+      margin-bottom: 30px;
+    }
   }
-  &:hover,
-  &:focus {
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-      1px 4px 6px rgba(0, 0, 0, 0.16);
+  @media screen and (min-width: 768px) {
+    width: calc(100% / 2 - 30px);
+    margin: 15px;
   }
+  @media screen and (min-width: 1200px) {
+    width: calc(100% / 3 - 30px);
+  }
+  background: var(--first-color);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
 }
 .project-list__link {
   display: block;
@@ -42,10 +82,6 @@
   margin-bottom: 0;
 }*/
 
-.card {
-  position: relative;
-  overflow: hidden;
-}
 /*.over-t {
   position: absolute;
   width: 100%;
