--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,35 +1,66 @@
 .hero {
+  padding-top: 118px;
+  padding-bottom: 118px;
   max-width: 480px;
   text-align: center;
   align-items: center;
   margin-left: auto;
   margin-right: auto;
+  @media screen and (min-width: 1200px) {
+    padding-top: 200px;
+    padding-bottom: 200px;
+  }
   background-color: var(--second-color);
   background-image: linear-gradient(
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url(../img/hero.jpg);
+    url(../img/mobile/hero-mobile-1x.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    background-image: url(../img/mobile/hero-mobile-2x.jpg);
+  }
   @media screen and (min-width: 768px) {
     max-width: 768px;
     background-color: var(--main-background-color);
     background-image: linear-gradient(
-      rgba(47, 48, 58, 0.4),
-      rgba(47, 48, 58, 0.4)
-    );
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(../img/tab/hero-tab-1x.png);
+    @media (min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+      background-image: linear-gradient(
+          rgba(47, 48, 58, 0.4),
+          rgba(47, 48, 58, 0.4)
+        ),
+        url(../img/tab/hero-tab-2x.png);
+    }
   }
   @media screen and (min-width: 1200px) {
     max-width: 1200px;
     min-height: 600px;
-    padding-top: 0;
+    // padding-top: 0;
     background-color: var(--main-background-color);
     background-image: linear-gradient(
-      rgba(47, 48, 58, 0.4),
-      rgba(47, 48, 58, 0.4)
-    );
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(../img/tab/hero-tab-1x.png);
+    @media (min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+      background-image: linear-gradient(
+          rgba(47, 48, 58, 0.4),
+          rgba(47, 48, 58, 0.4)
+        ),
+        url(../img/tab/hero-tab-2x.png);
+    }
   }
 }
 .hero__title {
