--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -10,7 +10,7 @@
     padding-top: 200px;
     padding-bottom: 200px;
   }
-  background-color: var(--second-color);
+  background-color: #2f303a;
   background-image: linear-gradient(
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
@@ -22,11 +22,15 @@
   @media (min-device-pixel-ratio: 2),
     (min-resolution: 192dpi),
     (min-resolution: 2dppx) {
-    background-image: url(../img/mobile/hero-mobile-2x.jpg);
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(../img/mobile/hero-mobile-2x.jpg);
   }
   @media screen and (min-width: 768px) {
     max-width: 768px;
-    background-color: var(--main-background-color);
+    background-color: #2f303a;
     background-image: linear-gradient(
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
@@ -43,10 +47,10 @@
     }
   }
   @media screen and (min-width: 1200px) {
-    max-width: 1200px;
+    max-width: 100%;
     min-height: 600px;
     // padding-top: 0;
-    background-color: var(--main-background-color);
+    background-color: #2f303a;
     background-image: linear-gradient(
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
