--- a/sass/layout/_btn-filter.scss
+++ b/sass/layout/_btn-filter.scss
@@ -27,13 +27,17 @@
   }
 }
 .filter-list__item {
-  & + & {
-    flex-wrap: wrap;
-    margin-left: 8px;
-  }
+  margin-right: 18px;
+  margin-bottom: 15px;
 }
 .filter-list {
   display: flex;
-  margin-bottom: 50px;
-  justify-content: center;
+  flex-wrap: wrap;
+  margin-bottom: 40px;
+  @media screen and (min-width: 768px) {
+    justify-content: center;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 50px;
+  }
 }
