--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -79,3 +79,19 @@
     color: var(--btn-color);
   }
 }
+// .btn-menu {
+//   display: inline-flex;
+//   background-color: transparent;
+//   padding: 0;
+//   margin: 0;
+//   border: none;
+// }
+// .btn-menu .icon-cross {
+//   display: none;
+// }
+// .btn-menu.is-open .icon-cross {
+//   display: block;
+// }
+// .btn-menu.is-open .icon-menu {
+//   display: none;
+// }
