--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -207,3 +207,14 @@
   background-size: cover;
   background-repeat: no-repeat;
 }*/
+.menu-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  padding: 24px;
+  z-index: 999;
+  transform: translateX(100%);
+  background-color: tomato;
+}
