--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,6 +5,7 @@
 @import "./components/container";
 @import "./components/section";
 @import "./components/btn";
+@import "./components/mobile-menu";
 @import "./base/common";
 @import "./components/modal";
 @import "./components/logo";
