--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -7,6 +7,12 @@ body {
 .list {
   list-style: none;
 }
+.a {
+  text-decoration: none;
+}
 .link {
   text-decoration: none;
+}
+.style {
+  overflow: hidden;
 }
