--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -26,6 +26,10 @@
   border-radius: 4px;
   transform: scale(1) rotate(0) translate(-50%, -50%);
   transition: transform var(--transition-time) var(--cubic);
+  @media (max-width: 1199px) {
+    width: 450px;
+    min-height: 609px;
+  }
 }
 .modal__close-btn {
   display: flex;
@@ -135,6 +139,9 @@
   color: var(--third-text-color);
   transition: border-color var(--transition-time) var(--cubic),
     outline var(--transition-time) var(--cubic);
+  @media (max-width: 1199px) {
+    @include font(12px, 1.17, 0.03em, normal);
+  }
 }
 .modal-form__btn {
   display: flex;
@@ -207,14 +214,3 @@
   background-size: cover;
   background-repeat: no-repeat;
 }*/
-.menu-container {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  padding: 24px;
-  z-index: 999;
-  transform: translateX(100%);
-  background-color: tomato;
-}
