--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -3,6 +3,10 @@
   border-bottom: 1px solid var(--main-color);
   padding-top: 24px;
   padding-bottom: 25px;
+  @media (max-width: 1199px) {
+    padding-top: 26px;
+    padding-bottom: 26px;
+  }
 }
 
 .nav {
@@ -13,6 +17,9 @@
 .nav__list {
   display: flex;
   margin-left: 93px;
+  @media (max-width: 767px) {
+    display: none;
+  }
 }
 
 .nav__item {
@@ -22,8 +29,10 @@
   }
 }
 .contacts__item {
-  & + & {
-    margin-left: 30px;
+  @media screen and (min-width: 1200px) {
+    & + & {
+      margin-left: 30px;
+    }
   }
 }
 
@@ -49,23 +58,37 @@
   &.current {
     color: var(--btn-color);
   }
-  .current::after {
+  &.current::after {
     content: "";
     position: absolute;
-    bottom: -1px;
+    bottom: -38px;
     left: 0;
     width: 100%;
     height: 4px;
-    background: var(--btn-color);
+    background-color: var(--btn-color);
     border-radius: 2px;
+    @media (min-width: 1200px) {
+      bottom: -33px;
+    }
   }
 }
 
 .contacts {
   display: flex;
   margin-left: auto;
+  @media (max-width: 767px) {
+    display: none;
+  }
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+    margin-left: auto;
+  }
 }
-
+.contacts__item:first-child {
+  margin-bottom: 10px;
+}
 .contacts__link {
   display: flex;
   align-items: center;
@@ -78,20 +101,12 @@
   &:focus {
     color: var(--btn-color);
   }
+  @media (min-width: 768px) and (max-width: 1199px) {
+    @include font(12px, 1.17, 0.02em, 500);
+  }
 }
-// .btn-menu {
-//   display: inline-flex;
-//   background-color: transparent;
-//   padding: 0;
-//   margin: 0;
-//   border: none;
-// }
-// .btn-menu .icon-cross {
-//   display: none;
-// }
-// .btn-menu.is-open .icon-cross {
-//   display: block;
-// }
-// .btn-menu.is-open .icon-menu {
-//   display: none;
-// }
+.place {
+  @media (max-width: 767px) {
+    padding-top: 10px;
+  }
+}
