--- a/css/main.css
+++ b/css/main.css
@@ -688,7 +688,7 @@ body {
 .nav__link.current::after {
   content: "";
   position: absolute;
-  bottom: -38px;
+  bottom: -33px;
   left: 0;
   width: 100%;
   height: 4px;
@@ -755,6 +755,14 @@ body {
 @media (max-width: 767px) {
   .place {
     padding-top: 10px;
+    padding-bottom: 10px;
+  }
+}
+
+@media (max-width: 1199px) {
+  .place {
+    padding-top: 21px;
+    padding-bottom: 21px;
   }
 }
 
@@ -1420,10 +1428,11 @@ body {
 
 .subscribe-form__section {
   align-items: center;
+  justify-content: center;
 }
 
 .subscribe-form__mail {
-  width: 450px;
+  width: 100%;
   height: 50px;
   margin: 0px;
   padding: 0px;
@@ -1440,6 +1449,12 @@ body {
   border-radius: 4px;
   background-color: transparent;
   color: var(--eighth-footer-color);
+}
+
+@media (min-width: 768px) {
+  .subscribe-form__mail {
+    width: 450px;
+  }
 }
 
 @media (min-width: 1200px) {
@@ -1513,6 +1528,7 @@ body {
 @media screen and (min-width: 768px) {
   .filter-list {
     justify-content: center;
+    color: currentColor;
   }
 }
 
