--- a/sass/layout/_btn-filter.scss
+++ b/sass/layout/_btn-filter.scss
@@ -36,6 +36,7 @@
   margin-bottom: 40px;
   @media screen and (min-width: 768px) {
     justify-content: center;
+    color: currentColor;
   }
   @media screen and (min-width: 1200px) {
     margin-bottom: 50px;
