--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -73,15 +73,15 @@
 }
 .subscribe-form__section {
   align-items: center;
+  justify-content: center;
 }
 .subscribe-form__mail {
-  width: 450px;
+  width: 100%;
   height: 50px;
   margin: 0px;
   padding: 0px;
   padding-right: 15px;
   padding-left: 15px;
-
   margin-bottom: 20px;
   @include font(16px, 1.25, 0.03em, normal);
   border: 1px solid rgba(255, 255, 255, 0.3);
@@ -90,6 +90,9 @@
   border-radius: 4px;
   background-color: transparent;
   color: var(--eighth-footer-color);
+  @media (min-width: 768px) {
+    width: 450px;
+  }
   @media (min-width: 1200px) {
     width: 358px;
     height: 50px;
