--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -61,7 +61,7 @@
   &.current::after {
     content: "";
     position: absolute;
-    bottom: -38px;
+    bottom: -33px;
     left: 0;
     width: 100%;
     height: 4px;
@@ -108,5 +108,10 @@
 .place {
   @media (max-width: 767px) {
     padding-top: 10px;
+    padding-bottom: 10px;
+  }
+  @media (max-width: 1199px) {
+    padding-top: 21px;
+    padding-bottom: 21px;
   }
 }
