--- a/css/main.css
+++ b/css/main.css
@@ -128,6 +128,7 @@ button {
 @media screen and (max-width: 767px) {
   .open-menu-btn {
     margin-left: auto;
+    padding: 0;
     top: 10px;
     right: 15px;
     width: 40px;
@@ -622,13 +623,6 @@ body {
   padding-bottom: 25px;
 }
 
-@media (max-width: 1199px) {
-  .header {
-    padding-top: 26px;
-    padding-bottom: 26px;
-  }
-}
-
 .nav {
   display: flex;
   align-items: center;
@@ -759,7 +753,7 @@ body {
   }
 }
 
-@media (max-width: 1199px) {
+@media (min-width: 768px) {
   .place {
     padding-top: 21px;
     padding-bottom: 21px;
@@ -1493,6 +1487,7 @@ body {
   font-weight: 500;
   font-family: inherit;
   padding: 6px 22px;
+  color: var(--second-text-color);
   background: var(--btn-port-color);
   text-align: center;
   border-radius: 4px;
