--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -1,6 +1,7 @@
 .open-menu-btn {
   @media screen and (max-width: 767px) {
     margin-left: auto;
+    padding: 0;
     top: 10px;
     right: 15px;
     width: 40px;
