--- a/sass/layout/_btn-filter.scss
+++ b/sass/layout/_btn-filter.scss
@@ -6,6 +6,7 @@
   @include font(16px, 1.63, 0.03em, 500);
   font-family: inherit;
   padding: 6px 22px;
+  color: var(--second-text-color);
   background: var(--btn-port-color);
   text-align: center;
   border-radius: 4px;
