--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -3,10 +3,6 @@
   border-bottom: 1px solid var(--main-color);
   padding-top: 24px;
   padding-bottom: 25px;
-  @media (max-width: 1199px) {
-    padding-top: 26px;
-    padding-bottom: 26px;
-  }
 }
 
 .nav {
@@ -110,7 +106,7 @@
     padding-top: 10px;
     padding-bottom: 10px;
   }
-  @media (max-width: 1199px) {
+  @media (min-width: 768px) {
     padding-top: 21px;
     padding-bottom: 21px;
   }
