--- a/css/main.css
+++ b/css/main.css
@@ -356,6 +356,7 @@ body {
   right: 8px;
   width: 30px;
   height: 30px;
+  fill: var(--second-color);
   background-color: transparent;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
