--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -49,6 +49,7 @@
   right: 8px;
   width: 30px;
   height: 30px;
+  fill: var(--second-color);
   background-color: transparent;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
