--- a/css/main.css
+++ b/css/main.css
@@ -69,13 +69,13 @@ button {
 
 @media screen and (min-width: 320px) and (max-width: 480px) {
   .container {
-    width: 320px;
+    max-width: 480px;
   }
 }
 
 @media screen and (min-width: 480px) {
   .container {
-    width: 480px;
+    width: 100%;
   }
 }
 
@@ -765,6 +765,7 @@ body {
   padding-top: 118px;
   padding-bottom: 118px;
   max-width: 480px;
+  width: 100%;
   text-align: center;
   align-items: center;
   margin-left: auto;
@@ -776,7 +777,7 @@ body {
   background-size: cover;
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 769px) and (max-width: 1200px) {
   .hero {
     padding-top: 200px;
     padding-bottom: 200px;
@@ -789,30 +790,32 @@ body {
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 481px) {
   .hero {
+    width: 100%;
     max-width: 768px;
     background-color: #2f303a;
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../img/tab/hero-tab-1x.png);
   }
 }
 
-@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
+@media screen and (min-width: 481px) and (min-device-pixel-ratio: 2), screen and (min-width: 481px) and (min-resolution: 192dpi), screen and (min-width: 481px) and (min-resolution: 2dppx) {
   .hero {
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../img/tab/hero-tab-2x.png);
   }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 769px) {
   .hero {
-    max-width: 100%;
+    max-width: 1600px;
+    width: 100%;
     min-height: 600px;
     background-color: #2f303a;
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../img/tab/hero-tab-1x.png);
   }
 }
 
-@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
+@media screen and (min-width: 769px) and (min-device-pixel-ratio: 2), screen and (min-width: 769px) and (min-resolution: 192dpi), screen and (min-width: 769px) and (min-resolution: 2dppx) {
   .hero {
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../img/tab/hero-tab-2x.png);
   }
