--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -5,10 +5,10 @@
   margin-right: auto;
   margin-left: auto;
   @media screen and (min-width: 320px) and (max-width: 480px) {
-    width: 320px;
+    max-width: 480px;
   }
   @media screen and (min-width: 480px) {
-    width: 480px;
+    width: 100%;
   }
   @media screen and (min-width: 768px) {
     width: 768px;
