--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -2,11 +2,12 @@
   padding-top: 118px;
   padding-bottom: 118px;
   max-width: 480px;
+  width: 100%;
   text-align: center;
   align-items: center;
   margin-left: auto;
   margin-right: auto;
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: 769px) and (max-width: 1200px) {
     padding-top: 200px;
     padding-bottom: 200px;
   }
@@ -28,7 +29,8 @@
       ),
       url(../img/mobile/hero-mobile-2x.jpg);
   }
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 481px) {
+    width: 100%;
     max-width: 768px;
     background-color: #2f303a;
     background-image: linear-gradient(
@@ -46,8 +48,9 @@
         url(../img/tab/hero-tab-2x.png);
     }
   }
-  @media screen and (min-width: 1200px) {
-    max-width: 100%;
+  @media screen and (min-width: 769px) {
+    max-width: 1600px;
+    width: 100%;
     min-height: 600px;
     // padding-top: 0;
     background-color: #2f303a;
