--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,8 +1,8 @@
 .header {
   background-color: var(--first-color);
   border-bottom: 1px solid var(--main-color);
-  padding-top: 24px;
-  padding-bottom: 25px;
+  // padding-top: 24px;
+  // padding-bottom: 25px;
 }
 
 .nav {
@@ -45,10 +45,12 @@
   display: block;
   text-decoration: none;
   @include font(14px, 1.14, 0.02em, 500);
-  /*padding-top: 32px;
-  padding-bottom: 32px;*/
   color: var(--second-text-color);
   transition: color var(--transition-time) var(--cubic);
+  @media screen and (min-width: 768px) {
+    padding-top: 32px;
+    padding-bottom: 32px;
+  }
   &:hover,
   &:focus,
   &.current {
@@ -57,14 +59,14 @@
   &.current::after {
     content: "";
     position: absolute;
-    bottom: -33px;
+    bottom: -1px;
     left: 0;
     width: 100%;
     height: 4px;
     background-color: var(--btn-color);
     border-radius: 2px;
-    @media (min-width: 1200px) {
-      bottom: -33px;
+    @media (min-width: 768px) {
+      bottom: -1px;
     }
   }
 }
@@ -83,13 +85,13 @@
   }
 }
 .contacts__item:first-child {
-  margin-bottom: 10px;
+  @media screen and (min-width: 481px) and (max-width: 1199px) {
+    margin-bottom: 10px;
+  }
 }
 .contacts__link {
   display: flex;
   align-items: center;
-  /*padding-top: 32px;
-  padding-bottom: 32px;*/
   @include font(14px, 1.14, 0.02em, 500);
   color: var(--third-text-color);
   transition: color var(--transition-time) var(--cubic);
@@ -97,17 +99,34 @@
   &:focus {
     color: var(--btn-color);
   }
+  @media screen and(min-width: 481px) and (max-width: 1199px) {
+  }
   @media (min-width: 768px) and (max-width: 1199px) {
     @include font(12px, 1.17, 0.02em, 500);
   }
-}
-.place {
-  @media (max-width: 767px) {
-    padding-top: 10px;
-    padding-bottom: 10px;
+  @media (min-width: 1200px) {
+    padding-top: 32px;
+    padding-bottom: 32px;
   }
-  @media (min-width: 768px) {
+}
+.contacts__mail {
+  @media screen and (min-width: 481px) and (max-width: 1199px) {
     padding-top: 21px;
+  }
+}
+.contacts__tel {
+  @media screen and (min-width: 481px) and (max-width: 1199px) {
     padding-bottom: 21px;
   }
 }
+
+// .place {
+//   @media (max-width: 767px) {
+//     padding-top: 10px;
+//     padding-bottom: 10px;
+//   }
+//   @media (min-width: 768px) {
+//     padding-top: 21px;
+//     padding-bottom: 21px;
+//   }
+// }
