--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,7 +1,7 @@
 .hero {
   padding-top: 118px;
   padding-bottom: 118px;
-  max-width: 480px;
+  max-width: 1600px;
   width: 100%;
   text-align: center;
   align-items: center;
@@ -29,9 +29,7 @@
       ),
       url(../img/mobile/hero-mobile-2x.jpg);
   }
-  @media screen and (min-width: 481px) {
-    width: 100%;
-    max-width: 768px;
+  @media screen and (min-width: 481px) and (max-width: 768px) {
     background-color: #2f303a;
     background-image: linear-gradient(
         rgba(47, 48, 58, 0.4),
@@ -49,8 +47,6 @@
     }
   }
   @media screen and (min-width: 769px) {
-    max-width: 1600px;
-    width: 100%;
     min-height: 600px;
     // padding-top: 0;
     background-color: #2f303a;
