--- a/sass/layout/_specification.scss
+++ b/sass/layout/_specification.scss
@@ -1,15 +1,11 @@
 .spc {
-  max-width: 480px;
   align-items: center;
   background-color: var(--first-color);
   margin: 0 auto;
   padding-top: 60px;
   padding-bottom: 60px;
-  @media screen and (min-width: 768px) {
-    max-width: 768px;
-  }
   @media screen and (min-width: 1200px) {
-    max-width: 1200px;
+    justify-content: center;
     padding-top: 94px;
     padding-bottom: 94px;
   }
@@ -18,10 +14,12 @@
   display: none;
 }
 .spc__list {
-  display: flex;
-  flex-wrap: wrap;
   @media screen and (min-width: 768px) {
     margin: -15px;
+  }
+  @media screen and (min-width: 481px) {
+    display: flex;
+    flex-wrap: wrap;
   }
 }
 .spc__item {
