--- a/css/main.css
+++ b/css/main.css
@@ -75,7 +75,7 @@ button {
 
 @media screen and (min-width: 480px) {
   .container {
-    width: 100%;
+    width: 480;
   }
 }
 
@@ -128,11 +128,11 @@ button {
 @media screen and (max-width: 767px) {
   .open-menu-btn {
     margin-left: auto;
-    padding: 0;
-    top: 10px;
-    right: 15px;
     width: 40px;
     height: 40px;
+    padding: 10px 0;
+    top: 50%;
+    left: 50%;
     background-color: var(--main-title-color);
     border: none;
     display: flex;
@@ -153,17 +153,16 @@ button {
 }
 
 .close-menu-btn {
-  margin-bottom: 30px;
-  padding: 0;
-  margin-left: auto;
-  width: 40px;
-  height: 40px;
-  background-color: var(--first-color);
-  border: none;
-  display: block;
+  width: 44px;
+  height: 44px;
   align-items: center;
   justify-content: center;
-  cursor: pointer;
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  border: none;
+  border-radius: 50%;
+  background-color: transparent;
 }
 
 .close-menu-btn:hover, .close-menu-btn:focus {
@@ -173,22 +172,30 @@ button {
 
 .menu-list {
   font-size: 40px;
-  line-height: 1.8;
+  line-height: 1.17;
   font-weight: 500;
   letter-spacing: 0.03em;
 }
 
 .mobile-menu {
+  transition: transform var(--transition-time) var(--cubic);
   position: fixed;
   background-color: #ffffff;
   width: 100vw;
   height: 100vh;
   top: 0;
   left: 0;
-  z-index: 9;
-  padding-top: 10px;
+  inset: 0;
+  z-index: 999;
+  padding-top: 48px;
   padding-bottom: 48px;
   display: flex;
+  overflow-y: auto;
+}
+
+.mobile-menu.is-hidden {
+  transform: translateX(100%);
+  transition: var(--transition-time) var(--cubic);
 }
 
 .mobile-menu .container {
@@ -202,6 +209,14 @@ button {
   .mobile-menu {
     display: none;
   }
+}
+
+.mob-nav__item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.mobile-menu-top {
+  margin-bottom: 60px;
 }
 
 .mob-nav__link {
@@ -248,8 +263,18 @@ button {
   margin-bottom: 32px;
 }
 
+@media (max-width: 479px) {
+  .mob-tel__item {
+    font-size: 28px;
+    line-height: 1.17;
+    letter-spacing: 0.02em;
+    font-weight: 400;
+  }
+}
+
 .mob-social-list {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .mob-social-list .mob-social__item:not(:last-child) {
@@ -617,6 +642,25 @@ body {
   margin-bottom: 20px;
 }
 
+@media (max-width: 767px) {
+  .space {
+    padding: 16px 0;
+  }
+}
+
+@media (min-width: 768px) {
+  .space {
+    padding: 26px 0;
+  }
+}
+
+@media (min-width: 1200px) {
+  .space {
+    padding-top: 24px;
+    padding-bottom: 25px;
+  }
+}
+
 .header {
   background-color: var(--first-color);
   border-bottom: 1px solid var(--main-color);
@@ -664,10 +708,6 @@ body {
 .nav__link {
   display: block;
   text-decoration: none;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  font-weight: 500;
   color: var(--second-text-color);
   transition: color var(--transition-time) var(--cubic);
 }
@@ -676,32 +716,27 @@ body {
   .nav__link {
     padding-top: 32px;
     padding-bottom: 32px;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    font-weight: 500;
   }
-}
-
-.nav__link:hover, .nav__link:focus, .nav__link.current {
-  color: var(--btn-color);
-}
-
-.nav__link.current::after {
-  content: "";
-  position: absolute;
-  bottom: -1px;
-  left: 0;
-  width: 100%;
-  height: 4px;
-  background-color: var(--btn-color);
-  border-radius: 2px;
-}
-
-@media (min-width: 768px) {
+  .nav__link:hover, .nav__link:focus, .nav__link.current {
+    color: var(--btn-color);
+  }
   .nav__link.current::after {
+    content: "";
+    position: absolute;
     bottom: -1px;
+    left: 0;
+    width: 100%;
+    height: 4px;
+    background-color: var(--btn-color);
+    border-radius: 2px;
   }
 }
 
 .contacts {
-  display: flex;
   margin-left: auto;
 }
 
@@ -720,7 +755,13 @@ body {
   }
 }
 
-@media screen and (min-width: 481px) and (max-width: 1199px) {
+@media (min-width: 1200px) {
+  .contacts {
+    display: flex;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .contacts__item:first-child {
     margin-bottom: 10px;
   }
@@ -729,10 +770,6 @@ body {
 .contacts__link {
   display: flex;
   align-items: center;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  font-weight: 500;
   color: var(--third-text-color);
   transition: color var(--transition-time) var(--cubic);
 }
@@ -741,7 +778,7 @@ body {
   color: var(--btn-color);
 }
 
-@media (min-width: 768px) and (max-width: 1199px) {
+@media (min-width: 768px) {
   .contacts__link {
     font-size: 12px;
     line-height: 1.17;
@@ -752,6 +789,10 @@ body {
 
 @media (min-width: 1200px) {
   .contacts__link {
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    font-weight: 500;
     padding-top: 32px;
     padding-bottom: 32px;
   }
@@ -857,6 +898,7 @@ body {
 
 .spc {
   align-items: center;
+  justify-content: center;
   background-color: var(--first-color);
   margin: 0 auto;
   padding-top: 60px;
@@ -878,11 +920,6 @@ body {
 @media screen and (min-width: 768px) {
   .spc__list {
     margin: -15px;
-  }
-}
-
-@media screen and (min-width: 481px) {
-  .spc__list {
     display: flex;
     flex-wrap: wrap;
   }
@@ -979,6 +1016,7 @@ body {
     line-height: 1.17;
     letter-spacing: 0.03em;
     font-weight: 700;
+    margin-bottom: 50px;
   }
 }
 
@@ -1068,8 +1106,6 @@ body {
 }
 
 .team {
-  display: flex;
-  align-items: center;
   background-color: var(--btn-port-color);
   padding-top: 60px;
   padding-bottom: 60px;
@@ -1082,24 +1118,24 @@ body {
   }
 }
 
-.team__list {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
+@media (max-width: 767px) {
+  .team__list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
 }
 
 @media screen and (min-width: 768px) {
   .team__list {
     margin: -15px;
+    display: flex;
+    flex-wrap: wrap;
   }
 }
 
 .team__item {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
+  display: block;
   margin-bottom: 30px;
   background: var(--first-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -1109,6 +1145,8 @@ body {
 @media screen and (max-width: 767px) {
   .team__item:not(:last-child) {
     margin-bottom: 30px;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
@@ -1126,9 +1164,7 @@ body {
 }
 
 .team__card {
-  align-items: center;
   padding: 30px 30px 32px 32px;
-  text-align: center;
 }
 
 .team__name {
@@ -1172,7 +1208,7 @@ body {
   justify-content: center;
   align-items: center;
   margin-bottom: -30px;
-  margin-left: -30px;
+  margin-right: -30px;
 }
 
 @media screen and (min-width: 320px) and (max-width: 480px) {
@@ -1202,7 +1238,7 @@ body {
   .clients-list__item {
     width: 320px;
     width: calc(100% / 2 - 30px);
-    margin-left: 30px;
+    margin-right: 30px;
   }
 }
 
@@ -1210,7 +1246,7 @@ body {
   .clients-list__item {
     width: 480px;
     width: calc(100% / 2 - 30px);
-    margin-left: 30px;
+    margin-right: 30px;
   }
 }
 
@@ -1218,7 +1254,7 @@ body {
   .clients-list__item {
     width: 768px;
     width: calc(100% / 3 - 30px);
-    margin-left: 30px;
+    margin-right: 30px;
   }
 }
 
@@ -1226,7 +1262,7 @@ body {
   .clients-list__item {
     width: 1200px;
     width: calc(100% / 6 - 30px);
-    margin-left: 30px;
+    margin-right: 30px;
   }
 }
 
@@ -1334,16 +1370,18 @@ body {
   }
 }
 
-@media (min-width: 768px) {
+@media (min-width: 767px) {
   .tablet__container {
     display: flex;
     justify-content: space-between;
+    margin-bottom: 60px;
   }
 }
 
 @media (min-width: 1200px) {
   .tablet__container {
     align-items: baseline;
+    margin-bottom: 0;
   }
 }
 
@@ -1386,8 +1424,10 @@ body {
   margin-bottom: 8px;
 }
 
-.footer__block {
-  margin-bottom: 60px;
+@media (max-width: 767px) {
+  .footer__block {
+    margin-bottom: 60px;
+  }
 }
 
 @media (min-width: 1200px) {
@@ -1397,14 +1437,16 @@ body {
   }
 }
 
-.footer-social__block {
-  margin-bottom: 60px;
-}
-
 @media (max-width: 480px) {
   .footer-social__block {
     display: block;
     margin-right: auto;
+  }
+}
+
+@media (max-width: 767px) {
+  .footer-social__block {
+    margin-bottom: 60px;
   }
 }
 
@@ -1435,7 +1477,6 @@ body {
   padding: 0px;
   padding-right: 15px;
   padding-left: 15px;
-  margin-bottom: 20px;
   font-size: 16px;
   line-height: 1.25;
   letter-spacing: 0.03em;
@@ -1451,6 +1492,12 @@ body {
 @media (min-width: 768px) {
   .subscribe-form__mail {
     width: 450px;
+  }
+}
+
+@media (max-width: 1199px) {
+  .subscribe-form__mail {
+    margin-bottom: 20px;
   }
 }
 
@@ -1578,6 +1625,7 @@ body {
 .project-list {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
 }
 
 @media screen and (min-width: 768px) {
@@ -1591,8 +1639,6 @@ body {
   align-items: center;
   margin-bottom: 30px;
   background: var(--first-color);
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 0px 0px 4px 4px;
 }
 
 @media screen and (max-width: 767px) {
@@ -1615,8 +1661,15 @@ body {
   }
 }
 
+.project-list__item:hover, .project-list__item:focus {
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
+
 .project-list__link {
-  display: block;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
   transition: box-shadow var(--transition-time) var(--cubic);
 }
 
@@ -1644,6 +1697,7 @@ body {
   height: 100%;
   opacity: 0;
   padding: 63px 24px;
+  overflow-y: auto;
   font-size: 18px;
   line-height: 1.56;
   letter-spacing: 0.03em;
@@ -1669,6 +1723,7 @@ body {
 }
 
 .card__squad {
+  flex-grow: 1;
   padding: 20px 24px;
   border: 1px solid var(--border-item-color);
   border-top: 0;
