--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -8,7 +8,7 @@
     max-width: 480px;
   }
   @media screen and (min-width: 480px) {
-    width: 100%;
+    width: 480;
   }
   @media screen and (min-width: 768px) {
     width: 768px;
