--- a/sass/components/_section__title.scss
+++ b/sass/components/_section__title.scss
@@ -5,5 +5,6 @@
   color: var(--second-text-color);
   @media screen and (min-width: 1200px) {
     @include font(36px, 1.17, 0.03em, 700);
+    margin-bottom: 50px;
   }
 }
