--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -12,7 +12,7 @@
   justify-content: center;
   align-items: center;
   margin-bottom: -30px;
-  margin-left: -30px;
+  margin-right: -30px;
   @media screen and (min-width: 320px) and (max-width: 480px) {
     display: flex;
     flex-wrap: wrap;
@@ -31,22 +31,22 @@
   @media screen and (min-width: 320px) and (max-width: 480px) {
     width: 320px;
     width: calc(100% / 2 - 30px);
-    margin-left: 30px;
+    margin-right: 30px;
   }
   @media screen and (min-width: 480px) {
     width: 480px;
     width: calc(100% / 2 - 30px);
-    margin-left: 30px;
+    margin-right: 30px;
   }
   @media screen and (min-width: 768px) {
     width: 768px;
     width: calc(100% / 3 - 30px);
-    margin-left: 30px;
+    margin-right: 30px;
   }
   @media screen and (min-width: 1200px) {
     width: 1200px;
     width: calc(100% / 6 - 30px);
-    margin-left: 30px;
+    margin-right: 30px;
   }
 
   color: var(--icon-social-color);
