--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -9,12 +9,14 @@
   }
 }
 .tablet__container {
-  @media (min-width: 768px) {
+  @media (min-width: 767px) {
     display: flex;
     justify-content: space-between;
+    margin-bottom: 60px;
   }
   @media (min-width: 1200px) {
     align-items: baseline;
+    margin-bottom: 0;
   }
 }
 .footer {
@@ -47,7 +49,9 @@
   margin-bottom: 8px;
 }
 .footer__block {
-  margin-bottom: 60px;
+  @media (max-width: 767px) {
+    margin-bottom: 60px;
+  }
   @media (min-width: 1200px) {
     max-width: 231px;
     margin-right: 70px;
@@ -58,8 +62,9 @@
     display: block;
     margin-right: auto;
   }
-
-  margin-bottom: 60px;
+  @media (max-width: 767px) {
+    margin-bottom: 60px;
+  }
 }
 .footer-social__title {
   margin-bottom: 20px;
@@ -82,7 +87,6 @@
   padding: 0px;
   padding-right: 15px;
   padding-left: 15px;
-  margin-bottom: 20px;
   @include font(16px, 1.25, 0.03em, normal);
   border: 1px solid rgba(255, 255, 255, 0.3);
   box-sizing: border-box;
@@ -92,6 +96,9 @@
   color: var(--eighth-footer-color);
   @media (min-width: 768px) {
     width: 450px;
+  }
+  @media (max-width: 1199px) {
+    margin-bottom: 20px;
   }
   @media (min-width: 1200px) {
     width: 358px;
