--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -44,35 +44,34 @@
 .nav__link {
   display: block;
   text-decoration: none;
-  @include font(14px, 1.14, 0.02em, 500);
   color: var(--second-text-color);
   transition: color var(--transition-time) var(--cubic);
   @media screen and (min-width: 768px) {
     padding-top: 32px;
     padding-bottom: 32px;
-  }
-  &:hover,
-  &:focus,
-  &.current {
-    color: var(--btn-color);
-  }
-  &.current::after {
-    content: "";
-    position: absolute;
-    bottom: -1px;
-    left: 0;
-    width: 100%;
-    height: 4px;
-    background-color: var(--btn-color);
-    border-radius: 2px;
-    @media (min-width: 768px) {
+    @include font(14px, 1.14, 0.02em, 500);
+    &:hover,
+    &:focus,
+    &.current {
+      color: var(--btn-color);
+    }
+    &.current::after {
+      content: "";
+      position: absolute;
       bottom: -1px;
+      left: 0;
+      width: 100%;
+      height: 4px;
+      background-color: var(--btn-color);
+      border-radius: 2px;
+      // @media (min-width: 768px) {
+      //   bottom: -1px;
+      // }
     }
   }
 }
 
 .contacts {
-  display: flex;
   margin-left: auto;
   @media (max-width: 767px) {
     display: none;
@@ -83,28 +82,29 @@
     flex-direction: column;
     margin-left: auto;
   }
+  @media (min-width: 1200px) {
+    display: flex;
+  }
 }
 .contacts__item:first-child {
-  @media screen and (min-width: 481px) and (max-width: 1199px) {
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
     margin-bottom: 10px;
   }
 }
 .contacts__link {
   display: flex;
   align-items: center;
-  @include font(14px, 1.14, 0.02em, 500);
   color: var(--third-text-color);
   transition: color var(--transition-time) var(--cubic);
   &:hover,
   &:focus {
     color: var(--btn-color);
   }
-  @media screen and(min-width: 481px) and (max-width: 1199px) {
-  }
-  @media (min-width: 768px) and (max-width: 1199px) {
+  @media (min-width: 768px) {
     @include font(12px, 1.17, 0.02em, 500);
   }
   @media (min-width: 1200px) {
+    @include font(14px, 1.14, 0.02em, 500);
     padding-top: 32px;
     padding-bottom: 32px;
   }
