--- a/sass/layout/_specification.scss
+++ b/sass/layout/_specification.scss
@@ -1,5 +1,6 @@
 .spc {
   align-items: center;
+  justify-content: center;
   background-color: var(--first-color);
   margin: 0 auto;
   padding-top: 60px;
@@ -16,8 +17,6 @@
 .spc__list {
   @media screen and (min-width: 768px) {
     margin: -15px;
-  }
-  @media screen and (min-width: 481px) {
     display: flex;
     flex-wrap: wrap;
   }
