--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -36,7 +36,8 @@
   }
   @media (min-width: 1200px) {
     width: 528px;
-    height: 581px;
+    max-width: none;
+    min-height: 581px;
   }
 }
 .modal__close-btn {
@@ -159,16 +160,15 @@
   justify-content: center;
 }
 .modal-form__check-text {
-  display: flex;
-  margin-bottom: 30px;
-  @include font(14px, 1.71, 00.03em, normal);
+  display: inline-block;
+  @include font(14px, 1.71, 0.03em, 400);
   justify-content: center;
   color: var(--third-text-color);
   @media (max-width: 1199px) {
-    @include font(12px, 1.17, 0.03em, normal);
+    @include font(12px, 1.17, 0.03em, 400);
   }
   span {
-    display: flex;
+    display: inline-block;
     align-items: center;
     justify-content: center;
     align-self: center;
@@ -185,6 +185,11 @@
   }
 }
 .modal-form__icon-check {
+  @media (min-width: 1200px) {
+    position: absolute;
+    width: 14px;
+    height: 13px;
+  }
   fill: transparent;
   transition: fill var(--transition-time) var(--cubic);
 }
@@ -212,6 +217,10 @@
   @media (max-width: 1199px) {
     @include font(12px, 1.17, 0.03em, normal);
   }
+}
+.modal-form__appol {
+  margin-bottom: 30px;
+  // display: inline-block;
 }
 
 /*.modal-check-text::before {
