--- a/sass/layout/_btn-filter.scss
+++ b/sass/layout/_btn-filter.scss
@@ -11,9 +11,6 @@
   text-align: center;
   border-radius: 4px;
   border: none;
-  &:not(:first-child) {
-    margin-left: 8px;
-  }
   &:hover,
   &:focus {
     color: var(--first-color);
@@ -28,8 +25,15 @@
   }
 }
 .filter-list__item {
-  margin-right: 18px;
-  margin-bottom: 15px;
+  @media (max-width: 767px) {
+    margin-right: 18px;
+    margin-bottom: 15px;
+  }
+  @media (min-width: 768px) {
+    &:not(:first-child) {
+      margin-left: 8px;
+    }
+  }
 }
 .filter-list {
   display: flex;
