--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -21,7 +21,7 @@
 }
 .team__item {
   display: block;
-  margin-bottom: 30px;
+  // margin-bottom: 30px;
   @media screen and (max-width: 767px) {
     &:not(:last-child) {
       margin-bottom: 30px;
